--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     },
     "authors": [
         {
-            "name": "Misbahul Munir",
-            "email": "misbahuldmunir@gmail.com"
+           "name": "lixiao",
+		   "email": "209201763@qq.com"
         }
     ],
     "minimum-stability": "dev",
