--- a/mdmsoft/yii2-admin/composer.json
+++ b/mdmsoft/yii2-admin/composer.json
@@ -5,8 +5,8 @@
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
     "support": {
-        "issues": "https://github.com/mdmsoft/yii2-admin/issues",
-        "source": "https://github.com/mdmsoft/yii2-admin"
+        "issues": "",
+        "source": "https://github.com/lixiao1290/yii2-admin.git"
     },
     "authors": [
         {
