--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "mdm\\admin\\": ""
+            "mdm\\admin\\": "lixiao/yii2-admin"	
         }
     },
     "extra": {
